# wow_api_stuff

./: .gitignore  main.py  pyproject.toml
arch/tf/: k8.tf
config/: env.py
data_dump/: go.mod  go.work  ratelimitpoc.go
data_dump/config/: env.go
data_dump/ratelimit/: token_bucket.go
data_dump/ratelimit/mem/: memory_token_bucket.go
data_dump/ratelimit/redis/: redis_token_bucket.go
data_dump/repo/: repo.go
data_dump/repo/sql/: base.go
data_dump/request/: blizzard_client.go  scrape.go
data_dump/request/blizzard/: client.go
data_dump/request/blizzard/model/: paths.go
data_dump/request/bnet/: client.go
data_dump/request/bnet/character/: char_integ_test.go  character.go
data_dump/request/bnet/character/keystone/: tmp.go
data_dump/request/bnet/character/raid/: tmp.go
data_dump/request/model/: request.go
data_dump/request/raiderio/: test.go
data_dump/request/wlogs/: tmp.go
data_dump/util/: flatmap.go  flatmap_test.go  map.go
routes/authentication/: __init__.py
wow_server/: Dockerfile  main.py  pyproject.toml
wow_server/config/: env.py
wow_server/model/db/: __init__.py
wow_server/routes/: deps.py
wow_server/routes/authentication/: __init__.py
